# wallee_integration

./: .gitignore  CLAUDE.md  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
wallee_integration/: api.py  hooks.py  install.py  modules.txt  tasks.py
wallee_integration/config/: desktop.py
wallee_integration/fixtures/: custom_field.json
wallee_integration/public/js/: pos_wallee_integration.js  pos_wallee_payment.js  wallee_captured_payments.js  wallee_terminal.js  wallee_terminal_payment.js
wallee_integration/wallee_integration/api/: client.py  invoice.py  payment_link.py  pos.py  refund.py  tax_utils.py  terminal.py  terminal_test.py  transaction.py
wallee_integration/wallee_integration/doctype/wallee_location/: wallee_location.js  wallee_location.json  wallee_location.py
wallee_integration/wallee_integration/doctype/wallee_payment_terminal/: wallee_payment_terminal.js  wallee_payment_terminal.json  wallee_payment_terminal.py
wallee_integration/wallee_integration/doctype/wallee_settings/: wallee_settings.js  wallee_settings.json  wallee_settings.py
wallee_integration/wallee_integration/doctype/wallee_terminal_configuration/: __init__.py  wallee_terminal_configuration.json  wallee_terminal_configuration.py
wallee_integration/wallee_integration/doctype/wallee_transaction/: wallee_transaction.js  wallee_transaction.json  wallee_transaction.py
wallee_integration/wallee_integration/doctype/wallee_webhook_log/: wallee_webhook_log.js  (+2 more)
wallee_integration/www/: wallee_failed.html  wallee_failed.py  wallee_success.html  wallee_success.py
(+10 files in other folders)
